# Halcyon

MRIdian/: CMakeLists.txt  Makefile  Thumbs.db  exampleB3a.cc  vis.mac
MRIdian/include/: #ML2Acc1.hh#  ArgumentInterpreter.hh  B3DetectorConstruction.hh  B3PrimaryGeneratorAction.hh  B3StackingAction.hh  B3aEventAction.hh  B3aRunAction.hh  CellLayoutInitializer.hh  DicomDetectorConstruction.hh  DicomHandler.hh  DicomNestedPhantomParameterisation.hh  G4IAEAphspReader.hh  G4IAEAphspWriter.hh  G4RunCollectTriggeredSignals.hh  LinacSimulationDetectorConstruction.hh  MRLinacHead.hh  RADCellSimulation.hh  ReadLinacRTInformation.hh  SteppingAction.hh  TruebeamHead.hh  VarianClinac2100Head.hh  projectDataTypeGlobals.hh  volumeConstruction.hh
MRIdian/src/: #DetectorConstruction.cc#  #ML2Acc1.cc#  #VarianClinac2100Head_oldDesign.cc#  ArgumentInterpreter.cc  B3DetectorConstruction.cc  B3PhysicsList.cc  B3PrimaryGeneratorAction.cc  B3StackingAction.cc  B3aActionInitialization.cc  B3aEventAction.cc  B3aRunAction.cc  CellLayoutInitializer.cc  DicomDetectorConstruction.cc  DicomHandler.cc  DicomNestedParamDetectorConstruction.cc  DicomNestedPhantomParameterisation.cc  DicomPartialDetectorConstruction.cc  DicomPhantomParameterisationColour.cc  DicomPhantomZSliceHeader.cc  DicomRegularDetectorConstruction.cc  G4IAEAphspReader.cc  G4IAEAphspWriter.cc  G4RunCollectTriggeredSignals.cc  LinacSimulationDetectorConstruction.cc  MRLinacHead.cc  RADCellSimulation.cc  ReadLinacRTInformation.cc  SeedAndRunJobs.sh  SteppingAction.cc  TruebeamHead.cc  VarianClinac2100Head.cc  iaea_header.cc  iaea_phsp.cc  iaea_record.cc  volumeContruction.cc
